--- a/onlineshopping/src/main/webapp/assets/css/myapp.css
+++ b/onlineshopping/src/main/webapp/assets/css/myapp.css
@@ -155,6 +155,14 @@ body
 }
 
 
+a.buttonlink
+{
+	color: #ffffff; /*link ma byc zapisany czcionka koloru bialego - domyslnie jest to niebieski*/
+	text-decoration: none;  /*brak podkreslenia linka*/
+
+}
+
+
 
 .sticky
 {
