--- a/onlineshopping/src/main/webapp/assets/css/myapp.css
+++ b/onlineshopping/src/main/webapp/assets/css/myapp.css
@@ -192,9 +192,12 @@ table#table1 {
 th {
   padding: 8px;
   text-align: left;
-  border-bottom: 1px solid black; 
-  color: #1D3652;
+  border-bottom: 3px solid #356595; 
+  border-top: 3px solid #356595; 
+  color: #356595;
 }
+
+
 
 td {
   padding: 8px;
@@ -203,3 +206,20 @@ td {
 }
 
 tr:hover {background-color:#f5f5f5;}
+
+
+/*formatowanie obrazkow w tabeli*/
+.dataTableImg {
+
+	width:200px;
+	height:120px;
+
+}
+
+.iconTableImg {
+	opacity: 0.7;
+}
+
+.iconTableImg:hover {
+	opacity: 1;
+}
