--- a/onlineshopping/src/main/webapp/assets/css/myapp.css
+++ b/onlineshopping/src/main/webapp/assets/css/myapp.css
@@ -421,7 +421,8 @@ form {
 }
 
 
-input[type=text]
+input[type=text],
+input[type=number]
 {
 	width: 300px;
 	background-color: #efefef;
@@ -436,7 +437,8 @@ input[type=text]
 }
 	
 	
-input[type=text]:focus
+input[type=text]:focus,
+input[type=number]:focus
 {
 
 	border: 2px solid #5EBAE9; /*obramowanie*/
